--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "shad-add": "npx shadcn-ui@latest add"
   },
   "dependencies": {
+    "@auth/core": "^0.27.0",
     "@radix-ui/react-checkbox": "^1.0.4",
     "@radix-ui/react-separator": "^1.0.3",
     "@radix-ui/react-slot": "^1.0.2",
@@ -20,6 +21,7 @@
     "clsx": "^2.1.0",
     "lucide-react": "^0.323.0",
     "next": "14.1.0",
+    "next-auth": "latest",
     "next-themes": "^0.2.1",
     "react": "^18",
     "react-dom": "^18",
