--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   },
   "dependencies": {
     "@auth/core": "^0.27.0",
+    "@prisma/client": "5.10.1",
     "@radix-ui/react-checkbox": "^1.0.4",
     "@radix-ui/react-separator": "^1.0.3",
     "@radix-ui/react-slot": "^1.0.2",
@@ -25,6 +26,7 @@
     "next": "14.1.0",
     "next-auth": "latest",
     "next-themes": "^0.2.1",
+    "prisma-client": "^0.0.0",
     "react": "^18",
     "react-dom": "^18",
     "tailwind-merge": "^2.2.1",
@@ -42,6 +44,7 @@
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
     "postcss": "^8",
+    "prisma": "^5.10.1",
     "tailwindcss": "^3.3.0",
     "typescript": "^5"
   }
